# displayxr-cef-host

./: .gitignore  CMakeLists.txt  NOTICE  README.md
scripts/: build.bat  run.bat  setup-deps.bat
src/: cef_app.cpp  cef_app.h  cef_client.cpp  cef_client.h  host.manifest  host_bridge.h  main.cpp  weave_compositor.cpp  weave_compositor.h  xr_session.cpp  xr_session.h
web/: app.js  index.html  style.css
